# txalpha

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/commentary/: index.rs
backend/src/processor/: get_fixture_odds_snapshot.rs  get_fixture_scores_snapshot.rs  get_fixture_validation.rs  get_fixtures.rs  mod.rs  odds_stream.rs  scores_stream.rs
backend/src/snapshot/: snapshot.rs
backend/src/types/: fixtures.rs  incoming_msg.rs  mod.rs  odds_stream.rs  scores_stream.rs  state.rs
tx-alpha-dashboard/: README.md  package.json
tx-alpha-dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx  types.ts
tx-alpha-dashboard/app/match/[id]/: page.tsx
tx-alpha-dashboard/app/matches/: page.tsx
tx-alpha-dashboard/components/: CommantaryFeed.tsx  EventFeed.tsx  MatchCard.tsx  ProbabilityChart.tsx  SettlementPanel.tsx  StatCard.tsx  hero-story.tsx  masthead.tsx
tx-alpha-dashboard/hooks/: useSocket.ts
tx-alpha-dashboard/lib/: country-flags.ts  get-status.ts  mock-data.ts
