[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
chrono = "0.4.45"
dashmap = "6.2.1"
dotenv = "0.15.0"
eventsource-stream = "0.2.3"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
